[gd_scene load_steps=8 format=3 uid="uid://dlj45f7qa8xsq"]

[ext_resource type="Script" path="res://experimental/chris/player2.gd" id="1_5jh1p"]
[ext_resource type="Script" path="res://experimental/chris/inventory.gd" id="2_7b887"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6q4f5"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_g43tg"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="CylinderMesh" id="CylinderMesh_odtfu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kno38"]
albedo_color = Color(0, 1, 1, 1)
rim_enabled = true

[sub_resource type="SphereMesh" id="SphereMesh_bqm4e"]
material = SubResource("StandardMaterial3D_kno38")
radius = 0.01
height = 0.02

[node name="playerRoot" type="CharacterBody3D" groups=["player_group"]]
script = ExtResource("1_5jh1p")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_6q4f5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_g43tg")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.529556, 0)

[node name="Camera3D" type="Camera3D" parent="head"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="head/Camera3D"]
transform = Transform3D(0.392816, 0, 0, 0, -1.99942e-08, 0.348721, 0, -0.457415, -1.52431e-08, 0, 0, -0.308377)
mesh = SubResource("CylinderMesh_odtfu")
skeleton = NodePath("../..")

[node name="look_ray" type="RayCast3D" parent="head/Camera3D"]
target_position = Vector3(0, 0, -5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="head/Camera3D/look_ray"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.753313)
mesh = SubResource("SphereMesh_bqm4e")

[node name="temp_inventory_ui" type="Node3D" parent="head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.529556, 0)

[node name="Label3D" type="Label3D" parent="head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.75125)
visible = false
text = "DROPPING ITEMS"

[node name="right_hand" type="Node3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, -0.3, -0.4)

[node name="both_hands" type="Node3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, -0.4)

[node name="left_hand" type="Node3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, -0.3, -0.4)

[node name="info_label" type="Label3D" parent="."]
billboard = 1
texture_filter = 1

[node name="Inventory" type="Node" parent="." node_paths=PackedStringArray("left_hand_spot", "both_hands_spot", "right_hand_spot", "inventory_owner", "inventory_info")]
script = ExtResource("2_7b887")
left_hand_spot = NodePath("../head/left_hand")
both_hands_spot = NodePath("../head/both_hands")
right_hand_spot = NodePath("../head/right_hand")
inventory_owner = NodePath("..")
inventory_info = NodePath("../head/Camera3D/temp_inventory_ui")
